# androidJNI

./: .gitignore  README.md  build.gradle  local.properties
app/: build.gradle
app/src/androidTest/java/com/blueeagle/hello_jni/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  app-utils.c  hello-jni.c
app/src/main/java/com/blueeagle/hello_jni/: MainActivity.java
app/src/main/java/com/example/hellojni/models/: User.java
app/src/main/java/com/example/hellojni/views/base/: BasePresenter.java  MvpView.java  Presenter.java
app/src/main/java/com/example/hellojni/views/hellojni/: HelloJniActivity.java  HelloJniMvpView.java  HelloPresenter.java
app/src/main/res/layout/: activity_hello_jni.xml  activity_main.xml
app/src/test/java/com/blueeagle/hello_jni/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
